--- a/src/client/Angularclient/src/app/pages/forms/buttons/buttons.component.html
+++ b/src/client/Angularclient/src/app/pages/forms/buttons/buttons.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-lg-12">
     <nb-card>
-      <nb-card-header>Kristers Buttons</nb-card-header>
+      <nb-card-header>Emmas Buttons</nb-card-header>
       <nb-card-body>
         <div class="buttons-row">
           <button *ngFor="let status of statuses" nbButton [status]="status" hero>
