--- a/src/client/Angularclient/src/app/pages/idcom/pagelogin/idcompagelogin.component.html
+++ b/src/client/Angularclient/src/app/pages/idcom/pagelogin/idcompagelogin.component.html
@@ -10,11 +10,11 @@
       <nb-card-body>
         <form class="form-inline">
         <div class="full-name-inputs">
-          <input type="text" nbInput fullWidth placeholder="Användarnamn">
-          <input type="text" nbInput fullWidth placeholder="Lösenord">
+          <input type="text" nbInput fullWidth [value]="user" (change)='user = $event.target.value' [placeholder]="placeHolderUser">
+          <input type="text" nbInput fullWidth [value]="pwd"  (change)='pwd = $event.target.value' [placeholder]="placeHolderPwd">
         </div>
         <div class="offset-sm-3 col-sm-9">
-          <button type="submit" nbButton status="primary">Logga in</button>
+          <button  nbButton status="primary" (click)="login()">Logga in</button>
 
         </div>
 
