--- a/src/client/Angularclient/src/app/pages/idcom/pagelogin/idcompagelogin.component.html
+++ b/src/client/Angularclient/src/app/pages/idcom/pagelogin/idcompagelogin.component.html
@@ -51,7 +51,7 @@
       <nb-card-body>
         <form class="form-inline">
         <section class="another-action" aria-label="Register">
-          Har du inget konto?<a class="text-link" routerLink="../register">Register</a>
+          Har du inget konto?<a class="text-link" routerLink="../pageregister">Register</a>
         </section>
       </form>
       </nb-card-body>
