--- a/src/client/Angularclient/src/app/pages/idcom/pageregister/idcompageregister.component.html
+++ b/src/client/Angularclient/src/app/pages/idcom/pageregister/idcompageregister.component.html
@@ -26,7 +26,7 @@
 
             <label class="label col-sm-3 form-control-label">Registera som </label>
             <nb-select  class="col-sm-9" (selectedChange)="mySelectedChanged($event)">
-              <nb-option *ngFor="let t of myTypes" [value]="t">{{ t.name}}</nb-option>
+              <nb-option *ngFor="let t of myTypes2" [value]="t">{{ t.name}}</nb-option>
             </nb-select>
 
           </div>
