--- a/src/client/Angularclient/src/app/pages/idcom/pageregister/idcompageregister.component.html
+++ b/src/client/Angularclient/src/app/pages/idcom/pageregister/idcompageregister.component.html
@@ -39,7 +39,8 @@
           </div>
           <div class="form-group row">
             <div class="offset-sm-3 col-sm-9">
-              <button type="submit" nbButton status="warning">Register</button>
+              <button type="submit" nbButton status="warning" nbPopover="Nä det har jag inte :P">Register</button>
+
             </div>
           </div>
         </form>
